# Nata

./: .gitignore  CONTRIBUTING.md  Data.json  LICENSE  README.md  __Data.json  deploy.sh  keep_alive.py  main.py  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
cogs/: ChefCommands.py  DevCommands.py  Dm.py  ErrorHandling.py  General.py  Greeting.py  Help.py  Roles.py
cogs/Nata/: Formation.py  Meet.py
cogs/Schedule/: Meet.py
