[tool.poetry]
name = "IMC Discord Bot"
version = "0.3.1"
description = "Automation Babyyyy"
authors = ["Khairi Hammami", "Mariem Moalla"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.4"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
